fix word-wrap (aka overflow-wrap) setting
- enable word-wrap anywhere by default
- disable word-wrap (reset to normal) in tables (except content cell of admonition table)

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -27,6 +27,7 @@ body {
   font-family: var(--body-font-family);
   line-height: var(--body-line-height);
   margin: 0;
+  word-wrap: anywhere; /* aka overflow-wrap; used when hyphens are disabled or aren't sufficient */
 }
 
 a {
@@ -62,10 +63,6 @@ strong strong { /* stylelint-disable-line */
   font-weight: normal;
 }
 
-table {
-  border-collapse: collapse;
-}
-
 button {
   cursor: pointer;
   font-family: inherit;
@@ -77,4 +74,9 @@ button {
 button::-moz-focus-inner {
   border: none;
   padding: 0;
+}
+
+table {
+  border-collapse: collapse;
+  word-wrap: normal; /* table widths aren't computed as expected when word-wrap is enabled */
 }
