--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -116,11 +116,16 @@
   color: var(--link_hover-font-color);
 }
 
+.doc a.bare {
+  hyphens: none;
+}
+
 .doc a.unresolved {
   color: var(--link_unresolved-font-color);
 }
 
 .doc i.fa {
+  hyphens: none;
   font-style: normal;
 }
 
@@ -131,6 +136,11 @@
   border-radius: 0.25em;
   font-size: 0.95em;
   padding: 0.125em 0.25em;
+}
+
+.doc code,
+.doc pre {
+  hyphens: none;
 }
 
 .doc pre {
@@ -261,6 +271,7 @@
   padding: 1rem 1rem 0.75rem;
   background: var(--admonition-background);
   width: 100%;
+  word-wrap: anywhere;
 }
 
 .doc .admonitionblock .icon {
@@ -641,7 +652,7 @@
 }
 
 .doc b.button {
-  white-space: nowrap;
+  white-space: nowrap; /* effectively ignores hyphens setting */
 }
 
 .doc b.button::before {
@@ -663,7 +674,7 @@
   box-shadow: 0 1px 0 var(--kbd-border-color), 0 0 0 0.1em var(--body-background) inset;
   padding: 0.25em 0.5em;
   vertical-align: text-bottom;
-  white-space: nowrap;
+  white-space: nowrap; /* effectively ignores hyphens setting */
 }
 
 .doc kbd,
@@ -687,24 +698,14 @@
   margin-right: 0;
 }
 
+.doc .menuseq,
+.doc .path {
+  hyphens: none;
+}
+
 .doc .menuseq i.caret::before {
   content: "\203a";
   font-size: 1.1em;
   font-weight: var(--body-font-weight-bold);
   line-height: calc(1 / 1.1);
-}
-
-.doc a.bare,
-.doc b.button,
-.doc code,
-.doc .path,
-.doc kbd,
-.doc .menuseq,
-.doc .icon i::after {
-  hyphens: none;
-}
-
-.doc th.tableblock,
-.doc td.tableblock {
-  word-break: break-word; /* overflow-wrap for table cells; gives space higher precedence than hyphen opportunity */
 }
