--- a/src/css/header.css
+++ b/src/css/header.css
@@ -14,7 +14,6 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  word-wrap: break-word;
   z-index: var(--z-index-navbar);
 }
 
